recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: not found: value step
	if(step!=0){
           ^Tree:4: error: not found: value step
		current(step)
                        ^Tree:7: error: not found: value step
		tree(step-1, length*shrink, angle, shrink)
                     ^