recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	if(step!=0){
		current(step)
		avance(length)
		droite(angle)
		tree(step-1, length*shrink, angle, shrink)
	} else {
		recule(length)
		
	}
}
